TP24-Update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Receivables/.vs/ProjectEvaluation
 Receivables/.vs/Receivables/DesignTimeBuild
 Receivables/.vs/Receivables/FileContentIndex
 Receivables/.vs/Receivables/v17
+/.vs/tp22/v17/.wsuo
+/Receivables/.vs/Receivables/config/applicationhost.config
